--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -27,3 +27,17 @@ p{
 	margin:5%;
 	
 }
+
+a{
+	diplay: inline-block;
+	margin-left: 40px;
+	text-decoration: none;
+	font-size: 40px;
+	color: #232323;
+	text-align:center;
+	text-shadow: 2px 2px 2px #6C6C6C
+}
+
+a:hover{
+	color:#FF0000;
+}
